--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-PRJ = wecare
+PRJ = revstar
 ENV = local
 
 # Database connection
-TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = 192.168.20.23
-TYPEORM_USERNAME = local_debug
-TYPEORM_PASSWORD = admin
-TYPEORM_DATABASE = WecareDB
-TYPEORM_PORT = 3306
+DB_VENDOR = mysql
+DB_HOST = 192.168.20.23
+DB_USERNAME = local_debug
+DB_PASSWORD = admin
+DB_NAME = WecareDB
+DB_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = libs/database/src/**/*.entity.ts
