--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --setupFiles dotenv/config",
+    "test:watch": "jest --setupFiles dotenv/config --watch",
+    "test:cov": "jest --setupFiles dotenv/config --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
+    "test:e2e": "jest --setupFiles dotenv/config --config ./apps/users/test/jest-e2e.json",
     "serverless:start": "npm run build  && npx serverless offline",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migrations:generate": "npm run typeorm -- migration:generate -n",
@@ -43,6 +43,7 @@
     "aws-sdk": "^2.1062.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.0",
     "fastify-swagger": "^4.13.1",
     "jwks-rsa": "^2.0.5",
     "moment": "^2.29.1",
