--- a/serverless.yml
+++ b/serverless.yml
@@ -16,11 +16,11 @@ provider:
     # Environment Variables
   environment:
     DB_DIALECT: "mysql"
-    DB_NAME: ${env:TYPEORM_DATABASE}
-    DB_USERNAME: ${env:TYPEORM_USERNAME}
-    DB_PASSWORD: ${env:TYPEORM_PASSWORD}
-    DB_HOST: ${env:TYPEORM_HOST}
-    DB_PORT: ${env:TYPEORM_PORT}
+    TYPEORM_DATABASE: ${env:TYPEORM_DATABASE}
+    TYPEORM_USERNAME: ${env:TYPEORM_USERNAME}
+    TYPEORM_PASSWORD: ${env:TYPEORM_PASSWORD}
+    TYPEORM_HOST: ${env:TYPEORM_HOST}
+    TYPEORM_PORT: ${env:TYPEORM_PORT}
     COGNITO_USER_POOL_ID: ${env:COGNITO_USER_POOL_ID}
     COGNITO_CLIENT_ID: ${env:COGNITO_CLIENT_ID}
     COGNITO_REGION: ${env:AWS_REGION}
