Moving to folder template

--- a/templates/mysql-typeorm/.env.example
+++ b/templates/mysql-typeorm/.env.example
@@ -2,24 +2,28 @@ PRJ = revstar
 ENV = local
 
 # Database connection
-DB_VENDOR = mysql
-DB_HOST = 192.168.20.23
-DB_USERNAME = local_debug
-DB_PASSWORD = admin
-DB_NAME = WecareDB
-DB_PORT = 3306
+TYPEORM_CONNECTION = mysql
+
+#local
+TYPEORM_HOST = 192.168.20.56
+TYPEORM_USERNAME = local_debug
+TYPEORM_PASSWORD = admin
+
+TYPEORM_DATABASE = revstar
+TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = libs/database/src/**/*.entity.ts
+TYPEORM_SEEDING_FACTORIES=libs/database/src/database/factories/**/*{.ts,.js}
+TYPEORM_SEEDING_SEEDS=libs/database/src/database/seeds/**/*{.ts,.js}
 
 # Typeorm migrations config
 TYPEORM_MIGRATIONS = libs/database/src/database/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR = libs/database/src/database/migrations
 TYPEORM_MIGRATIONS_TABLE_NAME = migrations
-TYPEORM_SEEDING_FACTORIES=libs/database/src/database/factories/**/*{.ts,.js}
-TYPEORM_SEEDING_SEEDS=libs/database/src/database/seeds/**/*{.ts,.js}
 
 ## Cognito admin pool ##
-COGNITO_USER_POOL_ID=us-east-1_u5b3YSQVa
-COGNITO_CLIENT_ID=4gc5ct864u462htjm4oj396q05
-AWS_REGION=us-east-1
+COGNITO_USER_POOL_ID=
+COGNITO_CLIENT_ID=
+AWS_REGION=
+
