--- a/templates/mysql-typeorm/.env.example
+++ b/templates/mysql-typeorm/.env.example
@@ -23,7 +23,7 @@ TYPEORM_MIGRATIONS_DIR = libs/database/src/database/migrations
 TYPEORM_MIGRATIONS_TABLE_NAME = migrations
 
 ## Cognito admin pool ##
-COGNITO_USER_POOL_ID=
-COGNITO_CLIENT_ID=
-AWS_REGION=
+COGNITO_USER_POOL_ID=ask-to-devops
+COGNITO_CLIENT_ID=ask-to-devops
+AWS_REGION=ask-to-devops
 
